--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "radio_component",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pedrovoliveira.github.io/forms_components",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -18,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
